--- a/wx_xinxuan/pages/category/index.wxml
+++ b/wx_xinxuan/pages/category/index.wxml
@@ -5,19 +5,15 @@
             <text class="txt">搜索, 共{{goodsCount}}款好味</text>
         </navigator>
     </view>
+      
     <view class="catalog">
         <scroll-view class="nav" scroll-y="true">
             <view class="item {{ nowId == 0 ?'active' : ''}}" bindtap="switchCate" data-id="0">全部</view>
-            <view class="item {{ nowId == item.id?'active' : ''}}" wx:for="{{navList}}" wx:key="id" data-id="{{item.id}}" bindtap="switchCate">{{item.name}}</view>
+            <view class="item {{ nowId == item.id?'active' : ''}}" wx:for="{{navList}}" wx:key="id" data-id="{{item.id}}" bindtap="switchCate">{{item.title}}</view>
         </scroll-view>
+        
         <scroll-view class="cate" scroll-y="true" bindscrolltolower="onBottom">
             <block wx:if="{{loading == 0}}">
-                <view class='banner-container' wx:if="{{nowId!= 0 && index_banner_img == 1}}">
-                    <image mode='aspectFill' style="width:100%;height:{{currentCategory.p_height}}rpx" src='{{currentCategory.img_url}}'>
-                    </image>
-                    <view class="bg" style="height:{{currentCategory.p_height}}rpx;line-height:{{currentCategory.p_height}}rpx;"></view>
-                    <view class="text" style="height:{{currentCategory.p_height}}rpx;line-height:{{currentCategory.p_height}}rpx;">{{currentCategory.name}}</view>
-                </view>
                 <view class='list-wrap clearfix'>
                     <view class="goods-box {{(index+1)%2 == 0?'no-margin':''}}" wx:for="{{list}}" wx:for-index="index" wx:for-item="item" wx:key="id">
                         <navigator hover-class='none' class='navi-url' url="/pages/goods/goods?id={{item.id}}">
@@ -26,7 +22,7 @@
                                     <view wx:if="{{item.is_new == 1}}" class='new-tag'>新品</view>
                                 </image>
                                 <block wx:if="{{item.goods_number <= 0}}">
-                                    <!-- <view class='no-goods-mask'></view> -->
+                                    <view class='no-goods-mask'></view> 
                                     <view class='sold-img'>
                                         <image class='soldout' src='/images/icon/sold-out.png'></image>
                                     </view>
@@ -54,5 +50,7 @@
                 </view>
             </block>
         </scroll-view>
+        
     </view>
+     
 </view>
