--- a/wx_xinxuan/pages/index/index.wxml
+++ b/wx_xinxuan/pages/index/index.wxml
@@ -5,67 +5,58 @@
             <view class='text'>客服</view>
         </button>
     </view> -->
+
     <view class="search" bindtap="goSearch">
         <image class="icon" src="/images/icon/search.png"></image>
         <text class="txt">搜索,发现更多好物</text>
     </view>
-    <view class='banner-wrap' wx:if="{{show_banner && banner.length > 0}}">
+
+    <view class='banner-wrap' wx:if="{{banner.length > 0}}">
         <swiper class="banner" indicator-dots="true" autoplay="{{autoplay}}" interval="3000" duration="1000"   >
             <swiper-item wx:for="{{banner}}" wx:key="id">
-                <navigator wx:if="{{item.link_type == 0}}" url="/pages/goods/goods?id={{item.goods_id}}">
-                    <image src="{{item.image_url}}" background-size="cover"></image>
-                </navigator>
-                <navigator wx:elif="{{item.link_type == 1}}" url="{{item.link}}">
-                    <image src="{{item.image_url}}" background-size="cover"></image>
+                <navigator url="/pages/goods/goods?id={{item.id}}">
+                    <image src="{{item.pic}}" background-size="cover"></image>
                 </navigator>
             </swiper-item>
         </swiper>
     </view>
-    <!-- <view class='marquee_box' wx:if="{{notice.length>0 && show_notice == 1}}">
+
+    <view class='marquee_box'>
         <swiper vertical="{{true}}" class="notice-swiper" indicator-dots="{{false}}" autoplay="{{autoplay}}" interval="2000" duration="1000">
-            <swiper-item wx:for="{{notice}}" wx:key="id" class='notice-wrap'>
-
-                    <view class="icon">
-                        <image src="/images/icon/notice-icon.png" class='img'>
-                        </image>
-                    </view>
-                    <view class='notice-text'>{{item.content}}</view>
-
+            <swiper-item class='notice-wrap'>
+                    <view class="icon"><image src="/images/icon/notice-icon.png" class='img'></image></view>
+                    <view class='notice-text'>过年采购还在找熟人吗？</view>
+            </swiper-item>
+            <swiper-item class='notice-wrap'>
+                    <view class="icon"><image src="/images/icon/notice-icon.png" class='img'></image></view>
+                    <view class='notice-text'>那个时代已经过去了，来我们这里，年货一站集采</view>
+            </swiper-item>
+            <swiper-item class='notice-wrap'>
+                    <view class="icon"><image src="/images/icon/notice-icon.png" class='img'></image></view>
+                    <view class='notice-text'>比熟人价还低，不需要搞价，就是最底，这就是成本价！</view>
+            </swiper-item>
+            <swiper-item class='notice-wrap'>
+                    <view class="icon"><image src="/images/icon/notice-icon.png" class='img'></image></view>
+                    <view class='notice-text'>合不合适，消费者说了算！</view>
             </swiper-item>
         </swiper>
-    </view> -->
-    <!-- <ad unit-id="adunit-c755904541658aa1" ad-type="grid" grid-opacity="0.8" grid-count="5" ad-theme="white"></ad> -->
-    <swiper class="catalog-wrap" indicator-dots="{{false}}" indicator-color="#dedede" indicator-active-color="#e00000" wx:if="{{show_channel}}">
+    </view>
+    
+    <swiper class="catalog-wrap" indicator-dots="{{false}}" indicator-color="#dedede" indicator-active-color="#e00000">
         <swiper-item class="first">
-            <view wx:for="{{channel}}" wx:if="{{item.sort_order < 7}}" wx:key="id" class='icon-navi' data-cateid="{{item.id}}" bindtap="goCategory">
-                <image class='icon-img' src="{{item.icon_url}}"></image>
-                <view class='icon-text'>{{item.name}}</view>
+            <view wx:for="{{channel}}"  wx:key="id" class='icon-navi' data-cateid="{{item.id}}" bindtap="goCategory">
+               <image class='icon-img' src="{{item.icon}}"></image>
+                <view class='icon-text'>{{item.title}}</view>
             </view>
-        </swiper-item>
-        <swiper-item class="first" wx:if="{{channel.length > 6}}">
-            <navigator wx:for="{{channel}}" wx:key="id" hover-class="none" class='icon-navi' url="/pages/category/index?id={{item.id}}" wx:if="{{item.sort_order > 6 && item.sort_order < 12}}">
-                <image class='icon-img' src="{{item.icon_url}}"></image>
-                <view class='icon-text'>{{item.name}}</view>
-            </navigator>
-        </swiper-item>
-        <swiper-item class="first" wx:if="{{channel.length > 11}}">
-            <navigator wx:for="{{channel}}" hover-class="none" class='icon-navi' url="/pages/category/index?id={{item.id}}" wx:if="{{item.sort_order > 10}}">
-                <image class='icon-img' src="{{item.icon_url}}"></image>
-                <view class='icon-text'>{{item.name}}</view>
-            </navigator>
         </swiper-item>
     </swiper>
+
+    
     <view class="goods-container">
         <view class='topic-container' wx:for="{{floorGoods}}" wx:key="id">
-            <view class='banner-container' bindtap="goCategory" data-cateid="{{item.id}}" wx:if="{{index_banner_img == 1}}">
-                <image mode='aspectFill' style="width:100%;height:{{item.height}}rpx" src='{{item.banner}}'>
-                </image>
-                <view class="bg" style="height:{{item.height}}rpx;line-height:{{item.height}}rpx;"></view>
-                <view class="text" style="height:{{item.height}}rpx;line-height:{{item.height}}rpx;">{{item.name}}</view>
-            </view>
-            <view wx:else class="category-title" data-cateid="{{item.id}}" bindtap="goCategory">
+            <view class="category-title" data-cateid="{{item.id}}" bindtap="goCategory">
                 <view class="title">
-                    <view class="text">{{item.name}}</view>
+                    <view class="text">{{item.title}}</view>
                     <view class="line"></view>
                 </view>
             </view>
@@ -73,30 +64,30 @@
                 <view class="new-box {{(iindex+1)%3 == 0?'no-margin':''}}" wx:for="{{item.goodsList}}" wx:for-index="iindex" wx:for-item="iitem" wx:key="id">
                     <navigator hover-class='none' class='navi-url' url="/pages/goods/goods?id={{iitem.id}}">
                         <view class="box">
-                            <image src="{{iitem.list_pic_url}}" class="image">
-                                <view wx:if="{{iitem.is_new == 1}}" class='new-tag'>新品</view>
+                            <image src="{{iitem.pic}}" class="image">
+                                <!-- <view wx:if="{{iitem.is_new == 1}}" class='new-tag'>新品</view> -->
                             </image>
-                            <block wx:if="{{iitem.goods_number <= 0}}">
+                            <block wx:if="{{iitem.goods_stock <= 0}}">
                                 <view class='sold-img'>
                                     <image class='soldout' src='/images/icon/sold-out.png'></image>
                                 </view>
                             </block>
                         </view>
                         <view class="goods-info {{iitem.goods_number <= 0?'fast-out-status':''}}">
-                            <view class="goods-title">{{iitem.name}}</view>
+                            <view class="goods-title">{{iitem.goods_name}}</view>
                             <view class='price-container'>
                                 <view class='l'>
-                                    <view class='h'>￥{{iitem.min_retail_price}}</view>
+                                    <view class='h'>￥{{iitem.goods_price}}</view>
                                 </view>
                             </view>
                         </view>
                     </navigator>
                 </view>
             </view>
-            <view class="more-category" data-cateid="{{item.id}}" bindtap="goCategory">点击查看更多{{item.name}}</view>
+            <view class="more-category" data-cateid="{{item.id}}" bindtap="goCategory">点击查看更多{{item.title}}</view>
         </view>
     </view>
-    <!-- <ad unit-id="adunit-b6fcdb43b7913591"></ad> -->
+
     <view class="no-more-goods ">没有更多商品啦</view>
 </view>
 <view class="loading" style="height:{{sysHeight}}px" wx:else>
