查询，商品详情接口编写

--- a/wx_xinxuan/pages/search/search.wxml
+++ b/wx_xinxuan/pages/search/search.wxml
@@ -9,7 +9,7 @@
     </view>
 
     <view class="no-search" wx:if="{{ !searchStatus}}">
-        <view class="serach-keywords search-history" wx:if="{{!keyword  && historyKeyword.length}}">
+        <!-- <view class="serach-keywords search-history" wx:if="{{!keyword  && historyKeyword.length}}">
             <view class="h">
                 <text class="title">历史记录</text>
                 <image src="/images/icon/trash-9.png" class="icon" bindtap="clearHistory"></image>
@@ -18,6 +18,7 @@
                 <view class="item" bindtap="onKeywordTap" data-keyword="{{item}}" wx:for="{{historyKeyword}}" hover-class="navigator-hover" wx:key="id">{{item}}</view>
             </view>
         </view>
+
         <view class="serach-keywords search-hot" wx:if="{{!keyword}}">
             <view class="h">
                 <text class="title">热门搜索</text>
@@ -25,9 +26,10 @@
             <view class="b">
                 <view class="item {{item.is_hot === 1 ? 'active' : ''}}" hover-class="navigator-hover" bindtap="onKeywordTap" data-keyword="{{item.keyword}}" wx:for="{{hotKeyword}}" wx:key="id">{{item.keyword}}</view>
             </view>
-        </view>
+        </view> -->
+
         <view class="shelper-list" wx:if="{{keyword}}">
-            <view class="item" hover-class="navigator-hover" wx:for="{{helpKeyword}}" bindtap="onKeywordTap" data-keyword="{{item}}" wx:key="id">{{item}}</view>
+            <view class="item" hover-class="navigator-hover" wx:for="{{helpKeyword}}" bindtap="onKeywordTap" data-keyword="{{item.goods_name}}" wx:key="id">{{item.goods_name}}</view>
         </view>
     </view>
 
@@ -37,7 +39,7 @@
                 <view class="item {{currentSortType == 'default' ? 'active' : ''}}" bindtap="openSortFilter" id="defaultSort">
                     <view class="txt">综合</view>
                 </view>
-                <view class="item {{currentSortType == 'price' ? 'active' : ''}}" bindtap="openSortFilter" id="priceSort">
+                <view class="item {{currentSortType == 'goods_price' ? 'active' : ''}}" bindtap="openSortFilter" id="priceSort">
                     <view class="txt">价格</view>
                     <image class="icon" src="/images/icon/order-by.png" wx:if="{{currentSortType == 'default' || currentSortType == 'sales'}}"></image>
                     <block wx:else>
@@ -45,7 +47,7 @@
                         <image class="icon" wx:elif="{{currentSortOrder == 'desc'}}" src='/images/icon/desc.png'></image>
                     </block>
                 </view>
-                <view class="item {{currentSortType == 'sales' ? 'active' : ''}}" bindtap="openSortFilter" id="salesSort">
+                <view class="item {{currentSortType == 'goods_stock' ? 'active' : ''}}" bindtap="openSortFilter" id="salesSort">
                     <view class="txt">销量</view>
                     <image class="icon" src="/images/icon/order-by.png" wx:if="{{currentSortType == 'default' || currentSortType == 'price'}}"></image>
                     <block wx:else>
@@ -61,22 +63,23 @@
                     <view class="goods-box {{(iindex+1)%2 == 0?'no-margin':''}}" wx:for="{{goodsList}}" wx:for-index="iindex" wx:for-item="iitem" wx:key="id">
                         <navigator hover-class='none' class='navi-url' url="/pages/goods/goods?id={{iitem.id}}">
                             <view class="box">
-                                <image src="{{iitem.list_pic_url}}" class="image">
-                                    <view wx:if="{{iitem.is_new == 1}}" class='new-tag'>新品</view>
+                                <image src="{{iitem.pic}}" class="image">
+                                    <!-- <view wx:if="{{iitem.is_new == 1}}" class='new-tag'>新品</view> -->
                                 </image>
-                                <block wx:if="{{iitem.goods_number == 0}}">
+                                <block wx:if="{{iitem.goods_cost == 0}}">
                                     <!-- <view class='no-goods-mask'></view> -->
                                     <view class='sold-img'>
                                         <image class='soldout' src='/images/icon/sold-out.png'></image>
                                     </view>
                                 </block>
                             </view>
-                            <view class="goods-info {{iitem.goods_number == 0?'fast-out-status':''}}">
-                                <view class="goods-title">{{iitem.name}}</view>
-                                <view class="goods-intro">{{iitem.goods_brief}}</view>
+                            <view class="goods-info {{iitem.goods_cost == 0?'fast-out-status':''}}">
+                                <view class="goods-title">{{iitem.goods_name}}</view>
+                                <view class="goods-intro">{{iitem.goods_keywords}}</view>
                                 <view class='price-container'>
                                     <view class='l'>
-                                        <view class='h'>￥{{iitem.min_retail_price}}</view>
+                                        <view class='stock'>已售：{{iitem.goods_stock}}</view>
+                                        <view class='h'>￥{{iitem.goods_price}}</view>
                                     </view>
                                 </view>
                             </view>
