--- a/wx_xinxuan/pages/goods/goods.wxml
+++ b/wx_xinxuan/pages/goods/goods.wxml
@@ -15,7 +15,7 @@
         <block wx:if="{{gallery.length > 0}}">
             <swiper bindchange="bindchange" class="banner banner-style1" indicator-dots="{{false}}" autoplay="{{false}}" current="{{current}}" circular="{{true}}" interval="3000" duration="1000" display-multiple-items="1">
                 <swiper-item class="item" wx:for="{{gallery}}" wx:key="id">
-                    <image bindtap="previewImage" data-src="{{item.img_url}}" src="{{item.img_url}}" class="slide-image" mode="aspectFill" />
+                    <image bindtap="previewImage" data-src="{{item.img_url}}" src="{{item.pic_url}}" class="slide-image" mode="aspectFill" />
                 </swiper-item>
             </swiper>
         </block>
@@ -27,8 +27,8 @@
     </view>
     <view class='info-wrap'>
         <view class='l'>
-            <view class='goods-title'>{{goods.name}}</view>
-            <view class='goods-intro'>{{goods.goods_brief}}</view>
+            <view class='goods-title'>{{goods.goods_name}}</view>
+            <view class='goods-intro'>{{goods.goods_keywords}}</view>
         </view>
         <view class='r'>
             <view bindtap="shareTo" class='share'>
@@ -41,12 +41,12 @@
         <view class="l">
             <view class="now-price">
                 <view class="sym">¥</view>
-                <view class="num">{{goods.retail_price}}</view>
+                <view class="num">{{goods.goods_price}}</view>
             </view>
         </view>
         <view class="r">
-            <view class='stock'>库存{{goods.goods_number}}</view>
-            <view class='sales'>已售{{goods.sell_volume}}份</view>
+            <view class='stock'>库存{{goods.goods_stock}}</view>
+            <view class='sales'>已售{{goods.goods_sell_num}}份</view>
         </view>
     </view>
     <view class='section-nav' bindtap="switchAttrPop">
@@ -63,7 +63,8 @@
             </view>
         </view>
     </view>
-    <view class="attr-pop-box" hidden="{{!openAttr}}" bindtap='closeAttr'>
+    
+    <!-- <view class="attr-pop-box" hidden="{{!openAttr}}" bindtap='closeAttr'>
         <view class="attr-pop" catchtap="handleTap">
             <view class="close" catchtap="closeAttr">
                 <image class="icon" src="/images/icon/icon-close.png"></image>
@@ -74,7 +75,7 @@
                 </view>
                 <view class="info">
                     <view class='price-range' wx:if="{{priceChecked == false}}">
-                        <!-- todo 原价不等于0的时候要补充 -->
+                        
                         <view class='retail-price'>
                             <view class='p-title'>零售价：</view>
                             <view class='g-price'>{{goods.retail_price}}元</view>
@@ -110,8 +111,9 @@
                 </view>
             </view>
         </view>
-    </view>
-    <view class="cart-add-box">
+    </view> -->
+
+    <!-- <view class="cart-add-box">
         <view class='l'>
             <view class='left-icon form-button' bindtap='goIndexPage'>
                 <form report-submit="true">
@@ -131,23 +133,24 @@
                 <view class='icon-text'>购物车</view>
             </view>
         </view>
-        <block wx:if="{{goods.goods_number > 0 && goods.is_on_sale == 1}}">
-            <block wx:if="{{goodsNumber > 0}}">
+        <block wx:if="{{goods.goods_stock > 0 && goods.status == 1}}">
+            <block wx:if="{{goods_stock > 0}}">
                 <view class="to-cart-btn" bindtap='addToCart'>加入购物车</view>
                 <view class="to-pay-btn" bindtap='fastToCart'>立即购买</view>
 
             </block>
-            <block wx:if="{{goodsNumber <= 0 }}">
+            <block wx:if="{{goods_stock <= 0 }}">
                 <view class="cart-empty">商品已售罄</view>
             </block>
         </block>
-        <block wx:elif="{{goods.goods_number <= 0}}">
+        <block wx:elif="{{goods.goods_stock <= 0}}">
             <view class="cart-empty">商品已售罄</view>
         </block>
-        <block wx:elif="{{goods.is_on_sale == 0}}">
+        <block wx:elif="{{goods.status == 0}}">
             <view class="cart-empty">商品已下架</view>
         </block>
-    </view>
+    </view> -->
+
     <view class="dialog {{ showShareDialog ? 'dialog_show' : '' }}">
         <view class="dialog-mask2" bindtap="hideDialog"></view>
         <view class="dialog-fixed dialog-share">
