--- a/wx_xinxuan/pages/goods/goods.wxml
+++ b/wx_xinxuan/pages/goods/goods.wxml
@@ -30,12 +30,12 @@
             <view class='goods-title'>{{goods.goods_name}}</view>
             <view class='goods-intro'>{{goods.goods_keywords}}</view>
         </view>
-        <view class='r'>
+        <!-- <view class='r'>
             <view bindtap="shareTo" class='share'>
                 <image class='icon' src='/images/icon/share.png'></image>
                 <view class='text'>分享</view>
             </view>
-        </view>
+        </view> -->
     </view>
     <view class='price-info'>
         <view class="l">
@@ -64,54 +64,18 @@
         </view>
     </view>
     
-    <!-- <view class="attr-pop-box" hidden="{{!openAttr}}" bindtap='closeAttr'>
+    <view class="attr-pop-box" hidden="{{!openAttr}}" bindtap='closeAttr'>
         <view class="attr-pop" catchtap="handleTap">
             <view class="close" catchtap="closeAttr">
                 <image class="icon" src="/images/icon/icon-close.png"></image>
             </view>
-            <view class="img-info">
-                <view class="img-wrap">
-                    <image class="img" src="{{gallery[0].img_url}}"></image>
-                </view>
-                <view class="info">
-                    <view class='price-range' wx:if="{{priceChecked == false}}">
-                        
-                        <view class='retail-price'>
-                            <view class='p-title'>零售价：</view>
-                            <view class='g-price'>{{goods.retail_price}}元</view>
-                        </view>
-                    </view>
-                    <view class='price-range' wx:elif="{{priceChecked == true}}">
-                        <view class='retail-price'>
-                            <view class='p-title'>零售价：</view>
-                            <view class='g-price'>{{checkedSpecPrice}}元</view>
-                        </view>
-                    </view>
-                    <view class="a" wx:if="{{productList.length>0}}">{{tmpSpecText}}</view>
-                </view>
-            </view>
-            <view class="spec-con">
-                <view class='spec-item'>
-                    <view class='name'>{{specificationList.name}}</view>
-                    <view class="values">
-                        <view class="value {{item.checked ? 'selected' : ''}} {{item.goods_number <=0?'out-stock':''}}" bindtap="clickSkuValue" wx:for="{{specificationList.valueList}}" wx:key="id" data-value-id="{{item.id}}" data-index="{{index}}" data-name-id="{{item.specification_id}}">{{item.value}}</view>
-                    </view>
-                </view>
-                <view class="number-item">
-                    <view class="name">库存</view>
-                    <view class='stock-num'>{{goodsNumber}}</view>
-                </view>
-                <view class="number-item">
-                    <view class="name">数量 ({{goods.goods_unit}})</view>
-                    <view class="selnum">
-                        <button class="cut" bindtap="cutNumber">-</button>
-                        <input value="{{number}}" class="number" type="number" cursor-spacing="100" bindblur="inputNumber" />
-                        <button class="add" bindtap="addNumber" disabled='{{disabled}}'>+</button>
-                    </view>
-                </view>
+            <view class="product-code">产品参数</view>
+            <view class="goods_spec" wx:for="{{specificationList}}" wx:for-index="index" wx:for-item="item" wx:key="id">
+                <view class="l">{{item.goods_key}}</view>
+                <view class="r">{{item.goods_value}}</view>
             </view>
         </view>
-    </view> -->
+    </view>
 
     <!-- <view class="cart-add-box">
         <view class='l'>
