--- a/wx_xinxuan/pages/index/index.wxml
+++ b/wx_xinxuan/pages/index/index.wxml
@@ -44,11 +44,24 @@
     
     <swiper class="catalog-wrap" indicator-dots="{{false}}" indicator-color="#dedede" indicator-active-color="#e00000">
         <swiper-item class="first">
-            <view wx:for="{{channel}}"  wx:key="id" class='icon-navi' data-cateid="{{item.id}}" bindtap="goCategory">
-               <image class='icon-img' src="{{item.icon}}"></image>
+            <view wx:for="{{channel}}" wx:if="{{item.order < 5}}" wx:for-index="index" wx:for-item="item" wx:key="id" class='icon-navi' data-cateid="{{item.id}}" bindtap="goCategory">
+                <image class='icon-img' src="{{item.icon}}"></image>
                 <view class='icon-text'>{{item.title}}</view>
             </view>
         </swiper-item>
+        <swiper-item class="first" wx:if="{{channel.length > 5}}">
+            <navigator wx:for="{{channel}}" wx:key="id" hover-class="none" class='icon-navi' data-cateid="{{item.id}}" bindtap="goCategory" wx:if="{{item.order > 4 && item.order < 9}}">
+                <image class='icon-img' src="{{item.icon}}"></image>
+                <view class='icon-text'>{{item.title}}</view>
+            </navigator>
+        </swiper-item>
+        <swiper-item class="first" wx:if="{{channel.length > 9}}">
+            <navigator wx:for="{{channel}}" hover-class="none" class='icon-navi' data-cateid="{{item.id}}" bindtap="goCategory" wx:if="{{item.order > 8}}">
+                <image class='icon-img' src="{{item.icon}}"></image>
+                <view class='icon-text'>{{item.title}}</view>
+            </navigator>
+        </swiper-item>
+
     </swiper>
 
     
