--- a/wx_xinxuan/pages/goods/goods.wxml
+++ b/wx_xinxuan/pages/goods/goods.wxml
@@ -77,7 +77,7 @@
         </view>
     </view>
 
-    <!-- <view class="cart-add-box">
+    <view class="cart-add-box">
         <view class='l'>
             <view class='left-icon form-button' bindtap='goIndexPage'>
                 <form report-submit="true">
@@ -87,10 +87,10 @@
                     </button>
                 </form>
             </view>
-            <button class='left-icon contact-button' session-from='{"nickName":"{{userInfo.nickname}}","avatarUrl":"{{userInfo.avatar}}"}' open-type="contact" show-message-card="true" hover-class="none">
+            <!-- <button class='left-icon contact-button' session-from='{"nickName":"{{userInfo.nickname}}","avatarUrl":"{{userInfo.avatar}}"}' open-type="contact" show-message-card="true" hover-class="none">
                 <image class='icon' src='/images/icon/chat.png'></image>
                 <view class='icon-text'>客服</view>
-            </button>
+            </button> -->
             <view class="left-icon" bindtap='openCartPage'>
                 <text class="cart-count">{{cartGoodsCount}}</text>
                 <image class='icon' src='/images/nav/icon-cart-b.png'></image>
@@ -98,22 +98,16 @@
             </view>
         </view>
         <block wx:if="{{goods.goods_stock > 0 && goods.status == 1}}">
-            <block wx:if="{{goods_stock > 0}}">
-                <view class="to-cart-btn" bindtap='addToCart'>加入购物车</view>
-                <view class="to-pay-btn" bindtap='fastToCart'>立即购买</view>
-
-            </block>
-            <block wx:if="{{goods_stock <= 0 }}">
-                <view class="cart-empty">商品已售罄</view>
-            </block>
+            <view class="to-cart-btn" bindtap='addToCart'>加入购物车</view>
+            <view class="to-pay-btn" bindtap='fastToCart'>立即购买</view>
         </block>
-        <block wx:elif="{{goods.goods_stock <= 0}}">
+        <block wx:elif="{{goods.goods_stock <= 0 && goods.status == 1}}">
             <view class="cart-empty">商品已售罄</view>
         </block>
         <block wx:elif="{{goods.status == 0}}">
             <view class="cart-empty">商品已下架</view>
         </block>
-    </view> -->
+    </view>
 
     <view class="dialog {{ showShareDialog ? 'dialog_show' : '' }}">
         <view class="dialog-mask2" bindtap="hideDialog"></view>
