--- a/wx_xinxuan/pages/ucenter/index/index.wxml
+++ b/wx_xinxuan/pages/ucenter/index/index.wxml
@@ -25,7 +25,7 @@
         </view>
     </view>
     <!-- <ad unit-id="adunit-89ae0a0b6860dc9f" ad-type="grid" grid-opacity="0.8" grid-count="5" ad-theme="white"></ad> -->
-    <view class="order-container">
+    <!-- <view class="order-container">
         <view class='header' data-index='0' bindtap='toOrderListTap'>
             <view class='top-title'>
                 <view class='left-line'></view>
@@ -62,7 +62,8 @@
                 <text class='order-txt'>待收货</text>
             </view>
         </view>
-    </view>
+    </view> -->
+    
     <view class="li-wrap">
         <view class="list" bindtap="toAddressList">
             <view class="list-l">
@@ -74,7 +75,8 @@
             <view class="arrow"></view>
         </view>
     </view>
-    <view class="li-wrap">
+    
+    <!-- <view class="li-wrap">
         <view class="list" bindtap="toFootprint">
             <view class="list-l">
                 <view class="icon">
@@ -102,7 +104,8 @@
             </view>
             <view class="arrow"></view>
         </view>
-    </view>
+    </view> -->
+    
     <view class="company">
         <view class="c-wrap" bindtap="getOrderInfo">
             <view class="text">心选折扣仓</view>
